viz hit-testing: Fix for BrowserPlugin.

Two notable changes:
 . Do async targeting even if the target is a browser-plugin.
 . Check to see if the hit-test result from blink is a BrowserPlugin,
   and if it is, return the FrameSinkId of that as the target.

BUG=880122

Change-Id: I6814161b0795ec2de6f1e28ccb8625008d7b284b
Reviewed-on: https://chromium-review.googlesource.com/1237543
Reviewed-by: James MacLean <wjmaclean@chromium.org>
Reviewed-by: Fady Samuel <fsamuel@chromium.org>
Reviewed-by: Navid Zolghadr <nzolghadr@chromium.org>
Reviewed-by: Ria Jiang <riajiang@chromium.org>
Commit-Queue: Sadrul Chowdhury <sadrul@chromium.org>
Cr-Commit-Position: refs/heads/master@{#593269}
Former-commit-id: 325a61c990a18576d6c61a75df0a300684ce4021